--- a/css/checklist.css
+++ b/css/checklist.css
@@ -45,6 +45,15 @@ img.graphy {
   display:block;
 }
 
+img.captiony {
+  width:50%;
+  min-width:200px;
+  max-width:400px;
+  margin:0 auto;
+  text-align:center;
+  display:block;
+}
+
 button.graphicAsset  {
   text-align:center;
   margin:0 auto;
